2023-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (ipa_draw_text): Treat pointer inputs as if they
	may be NULL.  Change live printfs to traces.  Adjust white-space
	in whole module to current conventions.  Addresses SourceForge
	issue #724 "Old WMF display: assert fails in draw.c", although I
	am unable to reproduce it.

2023-09-05  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Sorry for previous commit. After some
	investigations it seems that bit field masks are behind header
	when BI_SIZE=40.

2023-09-04  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Default bit split for older BMPs with 32bpp and
	BI_BITFIELDS set is crazy. Verified against IrFanView and
	bmpsuite-2.7.zip - image g/rgb32bf.bmp.

2023-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (ResizeImage): Restore vertical/horizontal
	filter order decision logic which was in place before the 1.3.41
	release since it may result in tiny changes to low order bits in
	16-bit/sample images, which may be concerning to some.  Resolves
	SourceForge issue #723 "montage result differ between 1.3.40 and
	1.3.41". The provided test-case showed that the filter filter
	order changed from "Vertical/Horizontal" to "Horizontal/Vertical".

2023-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Use MaxRGBDouble double
	constant rather than integral MaxRGB as argument to
	StringToDouble().

2023-09-01  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Bitmap header with size 52 bytes is also valid.

2023-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module_aliases.h: Add missing module aliases "PNG00",
	"PNG48", "PNG64".

2023-08-31  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c BMP with 2bpp is a legal BMP variant.
	https://en.wikipedia.org/wiki/BMP_file_format
	Quote: "The 2-bit per pixel (2bpp) format supports 4 distinct colors and stores